# OS_Micro-Colloquium

./: CMakeLists.txt  README.md
src/: FileSystemNode.h  ThreadSafeFileSystem.cpp  ThreadSafeFileSystem.h  main.cpp
src/nodes/: Directory.cpp  Directory.h  Disk.cpp  Disk.h  ImageFile.cpp  ImageFile.h  TextFile.cpp  TextFile.h
src/strategies/: MutexStrategy.cpp  MutexStrategy.h  NoLockStrategy.cpp  NoLockStrategy.h  SyncStrategy.h
src/visitors/: CalculateSizeVisitor.cpp  CalculateSizeVisitor.h  PrintStructureVisitor.cpp  PrintStructureVisitor.h  Visitor.h
tests/e2e/: CMakeLists.txt  test_threads.cpp
tests/unit/: CMakeLists.txt  test_nodes.cpp
